localstorage'a token kaydedildi

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ label {
   margin-bottom: 10px;
 }
 
-input[type="email"],
+input[type="text"],
 input[type="password"] {
   width: 90%;
   padding: 10px;
