--- a/src/styles.css
+++ b/src/styles.css
@@ -94,3 +94,17 @@ li a {
   border: none;
   padding: 10%;
 }
+
+.fullscreen-page {
+  width: 100%;
+  height: 90vh; /* Set the height to the viewport height */
+  background-color: #f0f0f0; /* Example background color */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.MuiBottomNavigation-root.css-16lloyr-MuiBottomNavigation-root {
+  width: 100%;
+}
