--- a/src/styles.css
+++ b/src/styles.css
@@ -100,23 +100,24 @@ li a {
   max-width: 400px;
   height: 90vh; /* Set the height to the viewport height */
   background-color: #f0f0f0; /* Example background color */
-  display: flex;
+  /*display: flex;*/
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
 .tweet-feed {
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
   align-items: center;
-  max-height: 650px; /* Max height for the tweet feed container */
+  height: 75vh; /* Max height for the tweet feed container */
   overflow-y: scroll; /* Add vertical scroll */
   width:96vw;
+  max-width: 400px;
 }
 
 .tweet-feed::-webkit-scrollbar {
-  width: 0.5em; /* Width of the scrollbar */
+  width: 0.1em; /* Width of the scrollbar */
 }
 
 .tweet-feed::-webkit-scrollbar-thumb {
@@ -128,8 +129,7 @@ li a {
   border-radius: 8px;
   padding: 10px;
   margin: 10px;
-  width: 88vw;
-  max-width: 400px;
+  /*max-width: 400px;*/
   background-color: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -157,4 +157,5 @@ li a {
   overflow: hidden;
   position: fixed;
   bottom: 0;
+  max-width: 400px;
 }
