--- a/src/styles.css
+++ b/src/styles.css
@@ -191,3 +191,40 @@ li a {
   display: table;
   clear: both;
 }
+
+/* submit form */
+.tweet-form-container {
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  resize: none; /* Kullanıcıların textarea'yı boyutlandırmalarını önler */
+}
+
+button.send-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button.send-button:hover {
+  background-color: #45a049;
+}
+/* /submit form */
