--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,11 @@ li a {
   /*border: 1px solid #040404;*/
 }
 
+.page-header {
+  height: 10%;
+  /*border: 1px solid #21ad31;*/
+}
+
 .tweet-feed {
   /*display: flex;*/
   flex-direction: column;
@@ -122,11 +127,6 @@ li a {
   position: fixed;
   /*border: 1px solid #21a4ad;*/
   margin-top:0%;
-}
-
-.page-header {
-  height: 10%;
-  /*border: 1px solid #21ad31;*/
 }
 
 .tweet-feed::-webkit-scrollbar {
@@ -228,3 +228,37 @@ button.send-button:hover {
   background-color: #45a049;
 }
 /* /submit form */
+
+/* profiles */
+
+.profile-feed {
+  /*display: flex;*/
+  flex-direction: column;
+  align-items: center;
+  height: 82%; /* Max height for the tweet feed container */
+  overflow-y: scroll; /* Add vertical scroll */
+  width:96vw;
+  max-width: 400px;
+  position: fixed;
+  /*border: 1px solid #21a4ad;*/
+  margin-top:0%;
+}
+
+.profile-feed::-webkit-scrollbar {
+  width: 0.1em; /* Width of the scrollbar */
+}
+
+.profile-feed::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Make the thumb (draggable part) transparent */
+}
+
+.profile {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 10px;
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* /profiles */
